Fix Overflow

--- a/assets/scss/partials/_btn-github.scss
+++ b/assets/scss/partials/_btn-github.scss
@@ -4,12 +4,13 @@
 	width:60px;
 	height:60px;
 	bottom:40px;
-	right:50px;
+	right:30px;
 	/*background-color:$color-principal;*/
 	background-image: linear-gradient(135deg, $color-secundario 0%, $color-principal 100%);
 	color:#FFF;
 	border-radius:55px;
     text-align: center ;
+	overflow: hidden;
     font-size:40px;
 	box-shadow: 2px 2px 3px #999;
 	-webkit-animation: bounce-in-top 1.1s both;
@@ -27,18 +28,6 @@
 }
 
 
-/* ----------------------------------------------
- * Generated by Animista on 2022-3-8 10:3:35
- * Licensed under FreeBSD License.
- * See http://animista.net/license for more info. 
- * w: http://animista.net, t: @cssanimista
- * ---------------------------------------------- */
-
-/**
- * ----------------------------------------
- * animation bounce-in-top
- * ----------------------------------------
- */
 @-webkit-keyframes bounce-in-top {
 	0% {
 	-webkit-transform: translateY(-500px);
