--- a/assets/scss/partials/_header.scss
+++ b/assets/scss/partials/_header.scss
@@ -3,6 +3,7 @@
     z-index: 100;
     position: fixed;
     width: 100%;
+    overflow: hidden;
 }
 
 .bg-color{
