--- a/assets/scss/partials/_hero.scss
+++ b/assets/scss/partials/_hero.scss
@@ -9,7 +9,7 @@
     display: flex;
     align-items: center;
     position: relative;
-    
+    overflow: hidden;
     z-index: 2; 
     -webkit-animation: bg-pan-top 55s both;
             animation: bg-pan-top 55s both;
