--- a/assets/scss/styles.css
+++ b/assets/scss/styles.css
@@ -5,6 +5,7 @@
   z-index: 100;
   position: fixed;
   width: 100%;
+  overflow: hidden;
 }
 
 .bg-color {
@@ -44,6 +45,7 @@
       -ms-flex-align: center;
           align-items: center;
   position: relative;
+  overflow: hidden;
   z-index: 2;
   -webkit-animation: bg-pan-top 55s both;
   animation: bg-pan-top 55s both;
@@ -593,12 +595,13 @@ a, a:hover {
   width: 60px;
   height: 60px;
   bottom: 40px;
-  right: 50px;
+  right: 30px;
   /*background-color:$color-principal;*/
   background-image: linear-gradient(135deg, #A5ABBD 0%, #414756 100%);
   color: #FFF;
   border-radius: 55px;
   text-align: center;
+  overflow: hidden;
   font-size: 40px;
   -webkit-box-shadow: 2px 2px 3px #999;
           box-shadow: 2px 2px 3px #999;
@@ -617,17 +620,6 @@ a, a:hover {
   margin-top: 16px;
 }
 
-/* ----------------------------------------------
- * Generated by Animista on 2022-3-8 10:3:35
- * Licensed under FreeBSD License.
- * See http://animista.net/license for more info. 
- * w: http://animista.net, t: @cssanimista
- * ---------------------------------------------- */
-/**
- * ----------------------------------------
- * animation bounce-in-top
- * ----------------------------------------
- */
 @-webkit-keyframes bounce-in-top {
   0% {
     -webkit-transform: translateY(-500px);
